

2011-July-16 Struan Robertson

	* Marquardt.cpp, MesmerMaths.cpp/.h: Tidying up of goodness of fit test.

2011-July-14 Struan Robertson

	* Marquardt.cpp, MesmerMaths.cpp/.h: Initial implementation of goodness 
	of fit test.

2011-July-08 Struan Robertson

	* Marquardt.cpp: Add parameter error estimates.

2011-July-06 Struan Robertson

	* Marquardt.cpp: Tidying up of Marquardt class.

2011-July-01 Struan Robertson

	* Marquardt.cpp: First pass implementation of Marquardt algorithm.

2011-June-20 Chris Morley

	Better error reporting for failing file from Paul Marshall's group.

	* src/main.cpp: flush log file after parsing so messages can be seen
	even if fails later.

	* src/XMLPersist.cpp: Error message for malformed CML property.

	* defaults.xml: add a default for <me:MarquardtDerivDelta> to prevent
	a crash if not specified. Other params probably need a default too.

2011-June-19 Struan Robertson

	* Marquardt.cpp: Addition of plug-in that will implement the Marquardt 
	algorithm.

2011-June-18 Struan Robertson

	* fitting.cpp: Minor fix to fitting method, previous Chi^2 value returned 
	if boundary encountered.
	* MolecularComponents.h/.cpp : Enum introduced for rotational top 
	specification.
	* Plugins: size_t applied in favour of int.

2011-June-08 Struan Robertson

	* TMatrix.h/.cpp, Makefile: Updated to fix build problem for Linux.
	* System.cpp,CollisionOperator.cpp: Altered so that yields can be 
	computed for a specified time.

2011-June-02 Chris Morley

	* src/MolecularComponents.cpp, src/MolecularComponents.h: Energy
	input from me:Hf298 (at last) using thermodynamicsFunctions().
	Priority is me:ZPE, me:Hf0, me:HfAT0, me:Hf298 and the conversion
	to me:ZPE is written to XML output to allow it to be used for fitting.
	HNO2 and NO ZPEs for Hf0 and Hf298 agree but 0.4kJ/mol difference
	for OH, apparently from thermodynamicsFunctions() (v NIST CCCBDB).
	 
	* src/MesmerEnv.cpp: initiallise Maxcell to 10000 for above because