@@ -1,5 +1,9 @@
 
+2011-July-17 Struan Robertson
 
+	* Marquardt.cpp, fitting.cpp, FittingUtils.cpp/.h: Refactor of fitting
+	methods, utility functions moved to base class.
+	
 2011-July-16 Struan Robertson
 
 	* Marquardt.cpp, MesmerMaths.cpp/.h: Tidying up of goodness of fit test.
